# tg_bot_currency

./: main.py  pyproject.toml
